# cstockmgr

./: .travis.yml  CMakeLists.txt
src/cstockmgr/: CMakeLists.txt  cstockmgr.cpp  main_window.cpp  main_window.hpp
src/cstockmgr/forms/: main_window.ui
src/libcstock/: CMakeLists.txt  citem.cpp  citem.hpp  cstock.cpp  cstock.hpp
